--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
-  flutter_animate: ^4.5.2
+  # flutter_animate: ^4.5.2
   intl: ^0.20.1
 
 dev_dependencies:
